project-2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogapp
  labels:
    deployment: blogapp
  namespace: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: blogAppPod
  template:
    metadata:
      labels:
        pod: blogAppPod
    spec:
      containers:
        - name: blog-app-pod-container
          image: manasss0508/full-stack-blog-app-manas:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: for-blog-app
  namespace: webapp
spec:
  type: ClusterIP
  selector:
    pod: blogAppPod
  ports:
    - port: 30007
      targetPort: 8080
