project-2/k8s/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway # selects istio ingress gateway pod
  servers:
    - port:
        number: 80 #port to ingress gateway listen on
        name: http
        protocol: http
      hosts:
        - "*"
